@@ -1,3 +1,8 @@
+2003-02-28  Frank Ch. Eigler  <fche@redhat.com>
+
+	* tree-mudflap.c (mudflap_enqueue_decl): Ignore extern artificial
+	variable declarations.
+
 2003-02-27  Diego Novillo  <dnovillo@redhat.com>
 
 	* tree-dfa.c (get_stmt_operands): INIT_EXPR nodes cannot
