@@ -1,3 +1,8 @@
+2003-02-28  Frank Ch. Eigler  <fche@redhat.com>
+
+	* decl2.c (finish_file): Adjust timing of mudflap_finish_file call
+	to account for unit-at-a-time compilation.
+
 2003-02-07  Jason Merrill  <jason@redhat.com>
 
 	* cp-simplify.c (cp_simplify_expr): Handle BASELINK.
